add inventory count to product add dashboard services
