# pkg/api/handlers/dashboard.go
@@ -6,6 +6,27 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// HandleGetDashboard godoc
+//
+//	@Summary		Get dashboard
+//	@Description	Get dashboard
+//	@Tags			Dashboard
+//	@Accept			json
+//	 @Security     ApiKeyAuth
+//	 @Security     Bearer
+//	@Produce		json
+//	@Success		200	{object}	models.DashboardStats
+//	@Failure		404	{object}	dto.ErrorResponse
+//	@Router			/v1/dashboard [get]
+func (h *Handler) HandleGetDashboard(c *gin.Context) {
+	stats, err := h.Repository.Dashboard.GetStats()
+	if err != nil {
+		h.handleError(c, err, "Dashboard")
+		return
+	}
+	h.Response.SuccessResponse(c, stats)
+}
+
 // HandleGetRecentActivities godoc
 //
 //	@Summary		Get recent activities
